--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Avaliação Formadora 1 </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">AV1</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <img
+      src="https://scontent.fgig4-1.fna.fbcdn.net/v/t39.30808-6/370390933_3644529432536937_6293672682743105173_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEcIeTqOpiQzywuGuVoNrI7eg64qrN_h8h6Driqs3-HyAhnH1AWukK5dJcfRMlolOnMCtudYztSbWRIeQucMLUq&_nc_ohc=lo75VZ8ngxcAX_Yrg9m&_nc_ht=scontent.fgig4-1.fna&oh=00_AfDsxe9KouScM8wjdVSaVUJtn2vvmpdw8OreAeCwy0Fgyg&oe=660B4244"
+    />
+    <br />
+    <strong>Gil Guimarães</strong>
+    <p>Código de Turma: ADS0301M</p>
   </div>
 </ion-content>
