--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,5 +18,13 @@
     <br />
     <strong>Gil Guimarães</strong>
     <p>Código de Turma: ADS0301M</p>
+    <img
+      class="flowers"
+      srcset="
+        https://64.media.tumblr.com/1b6ee116dabab351f00adddc1265ceab/7a2e9913bcd661a8-75/s100x200/988fdaf6bc870b1990e88efb34cb85a596e43e59.gifv 100w,
+        https://64.media.tumblr.com/1b6ee116dabab351f00adddc1265ceab/7a2e9913bcd661a8-75/s250x400/f1c5702d2652ca3b7845a66b76989b91ee36852a.gifv 250w,
+        https://64.media.tumblr.com/1b6ee116dabab351f00adddc1265ceab/7a2e9913bcd661a8-75/s400x600/b129100821e47a2f8e45728ce4493c3eeefecd87.gifv 300w
+      "
+    />
   </div>
 </ion-content>
