--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
       src="https://scontent.fgig4-1.fna.fbcdn.net/v/t39.30808-6/370390933_3644529432536937_6293672682743105173_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEcIeTqOpiQzywuGuVoNrI7eg64qrN_h8h6Driqs3-HyAhnH1AWukK5dJcfRMlolOnMCtudYztSbWRIeQucMLUq&_nc_ohc=lo75VZ8ngxcAX_Yrg9m&_nc_ht=scontent.fgig4-1.fna&oh=00_AfDsxe9KouScM8wjdVSaVUJtn2vvmpdw8OreAeCwy0Fgyg&oe=660B4244"
     />
     <br />
-    <strong>Gil Guimarães</strong>
+    <strong>Gil Guimarãe</strong>
     <p>Código de Turma: ADS0301M</p>
     <img
       class="flowers"
